# hardview

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  bootstrap  configure  configure.ac  regen
autom4te.cache/: output.0  traces.0  traces.1
design/: ObjectSketch.odg  README
py/: smbios-read-algo.py  smbios.py
src/: .gitignore  Collector.cpp  Collector.hpp  Makefile.am  Makefile.in  OsCollector.cpp  OsCollector.hpp  Session.cpp  Session.hpp  SmBios.cpp  SmBios.h  SmBiosBinary.cpp  SmBiosBinary.h  SmElement.cpp  SmElement.h  SmReader.cpp  SmReader.h  cli.c  cliopt.c  cliopt.h  hardview.cpp  types.h
src/.deps/: cli.Po  cliopt.Po
tests/: .gitignore  Makefile.am  Makefile.in  OsCollectorTest.cpp  SessionTest.cpp  SmBiosTest.cpp  check_cli  check_cli.c  dmidecode-pc.txt  hp-compaq-6005-sff.dmi  hp-dl380-g8.dmi
tests/.deps/: check_cli-check_cli.Po
